<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sergio.musicinfo.fragments.AlbumInfoFragment">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_content_album"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_album"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:contentDescription="@string/album_art"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/tv_name_album"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="22sp" />

                <Button
                    android:id="@+id/btn_spotify"
                    android:layout_width="180dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/spotify_btn_background"
                    android:text="@string/view_spotify"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_release_date_album"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/artists"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_artists_album"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</FrameLayout>
